testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignmentOutOfOrder.errors.txt
index.js(1,7): error TS2339: Property 'Item' does not exist on type '{}'.
index.js(2,8): error TS2339: Property 'Object' does not exist on type '{}'.
index.js(2,31): error TS8010: Type annotations can only be used in TypeScript files.
index.js(2,37): error TS2339: Property 'Item' does not exist on type '{}'.
index.js(4,11): error TS2339: Property 'Object' does not exist on type '{}'.
index.js(4,34): error TS8010: Type annotations can only be used in TypeScript files.
index.js(4,41): error TS2339: Property 'Object' does not exist on type '{}'.
index.js(6,12): error TS2503: Cannot find namespace 'Workspace'.


==== index.js (8 errors) ====
    First.Item = class I {}
          ~~~~
!!! error TS2339: Property 'Item' does not exist on type '{}'.
    Common.Object = class extends First.Item {}
           ~~~~~~
!!! error TS2339: Property 'Object' does not exist on type '{}'.
                                  ~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                                        ~~~~
!!! error TS2339: Property 'Item' does not exist on type '{}'.
    
    Workspace.Object = class extends Common.Object {}
              ~~~~~~
!!! error TS2339: Property 'Object' does not exist on type '{}'.
                                     ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                                            ~~~~~~
!!! error TS2339: Property 'Object' does not exist on type '{}'.
    
    /** @type {Workspace.Object} */
               ~~~~~~~~~
!!! error TS2503: Cannot find namespace 'Workspace'.
    var am;
    
==== roots.js (0 errors) ====
    var First = {};
    var Common = {};
    var Workspace = {};
    